--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-	<a href="https://wa.me/918789529215?text=Hi%20There!"
+	<a href="https://wa.me/201154624698?text=" 
 	class="float"
 	style="
 	  position: fixed;
